K1J-1777: Message communication from cs does not show in rehabstod (#676)
Co-authored-by: Lucas Lundström <lucas.lundstroem@soprasteria.com>